Calculating speed, main screed layout is now RelativeLayout, window soft input mode in manifest changed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".mainscreen.MainScreenActivity">
+        <activity android:name=".mainscreen.MainScreenActivity"
+            android:windowSoftInputMode="adjustPan">
 
         </activity>
     </application>
