Major navigation and toolbar title improvements.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
         </activity>
 
         <activity android:name=".mainscreen.MainScreenActivity"
-            android:windowSoftInputMode="adjustPan">
-
+            android:windowSoftInputMode="adjustPan"
+            android:noHistory="true">
         </activity>
     </application>
 
