--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/DarkTheme"
+        android:theme="@style/MyTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity android:name=".start.StartActivity">
