--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,7 @@
         </activity>
 
         <activity android:name=".mainscreen.MainScreenActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:noHistory="true">
+            android:windowSoftInputMode="adjustPan">
         </activity>
     </application>
 
