--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.thedistantblue.triaryapp">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_triary"
@@ -22,6 +24,10 @@
 
         <activity android:name=".mainscreen.MainScreenActivity"
             android:windowSoftInputMode="adjustPan">
+        </activity>
+
+        <activity android:name=".network.SomeClass">
+
         </activity>
     </application>
 
