--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:windowSoftInputMode="adjustPan">
         </activity>
 
-        <activity android:name=".network.SomeClass">
+        <activity android:name=".network.NetworkTest">
 
         </activity>
     </application>
