--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,13 +29,11 @@ android {
 }
 
 dependencies {
+    implementation "androidx.room:room-runtime:2.3.0"
     implementation 'com.rabbitmq:amqp-client:5.8.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha05'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
@@ -48,7 +46,13 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     compileOnly "org.projectlombok:lombok:1.18.16"
 
+    annotationProcessor "androidx.room:room-compiler:2.3.0"
     annotationProcessor 'org.projectlombok:lombok:1.18.16'
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
 
     // JAX-B dependencies for JDK 9+
     //implementation "javax.xml.bind:jaxb-api:2.2.12"
