--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,15 @@ android {
 }
 
 dependencies {
+    compileOnly "org.projectlombok:lombok:1.18.16"
+    annotationProcessor 'org.projectlombok:lombok:1.18.16'
+
     implementation "androidx.room:room-runtime:2.3.0"
-    implementation 'com.google.dagger:dagger:2.x'
+    annotationProcessor "androidx.room:room-compiler:2.3.0"
+
+    implementation 'com.google.dagger:dagger:2.35.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.35.1'
+
     implementation 'com.rabbitmq:amqp-client:5.8.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -45,16 +52,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    compileOnly "org.projectlombok:lombok:1.18.16"
-
-    annotationProcessor "androidx.room:room-compiler:2.3.0"
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.x'
-    annotationProcessor 'org.projectlombok:lombok:1.18.16'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
 
     // JAX-B dependencies for JDK 9+
     //implementation "javax.xml.bind:jaxb-api:2.2.12"
