--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.35.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.35.1'
 
+    implementation "io.reactivex.rxjava3:rxjava:3.0.12"
+    implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
+    implementation "androidx.room:room-rxjava3:2.3.0"
     implementation 'com.rabbitmq:amqp-client:5.8.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
