--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".mainscreen.MainScreenActivity"
+        <activity android:name=".mainscreen.MainScreenActivityImpl"
             android:windowSoftInputMode="adjustPan">
         </activity>
 
