Adds classes and layouts for navigation inside power training detail fragment
refs #18

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:windowSoftInputMode="adjustPan">
         </activity>
 
-        <activity android:name=".mainscreen.power.TrainingDetailActivity"
+        <activity android:name=".mainscreen.power.detail.PowerTrainingDetailActivity"
             android:windowSoftInputMode="adjustPan">
         </activity>
 
