--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,27 +1,27 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'androidx.navigation.safeargs'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
     buildFeatures {
         compose true
+        viewBinding true
     }
     kotlinOptions {
         jvmTarget = "1.8"
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.0.5'
+        kotlinCompilerExtensionVersion '1.3.1'
     }
     defaultConfig {
         applicationId "com.thedistantblue.triaryapp"
         minSdkVersion 25
-        targetSdkVersion 31
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -36,33 +36,34 @@ android {
     dataBinding {
         enabled true
     }
+    //namespace 'com.thedistantblue.triaryapp'
 }
 
 dependencies {
     compileOnly "org.projectlombok:lombok:1.18.22"
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
 
-    implementation "androidx.room:room-runtime:2.3.0"
-    annotationProcessor "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.room:room-runtime:2.4.3"
+    annotationProcessor "androidx.room:room-compiler:2.4.3"
 
     implementation 'com.google.dagger:dagger:2.35.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.35.1'
 
     implementation "io.reactivex.rxjava3:rxjava:3.0.12"
     implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
-    implementation "androidx.room:room-rxjava3:2.3.0"
+    implementation "androidx.room:room-rxjava3:2.4.3"
     implementation 'com.rabbitmq:amqp-client:5.8.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0-alpha01'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.navigation:navigation-fragment:2.3.5'
-    implementation 'androidx.navigation:navigation-ui:2.3.5'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0-beta02'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.squareup.retrofit2:retrofit:2.7.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
-    implementation "androidx.core:core-ktx:1.7.0"
+    implementation "androidx.core:core-ktx:1.9.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation "com.google.accompanist:accompanist-navigation-animation:0.16.1"
@@ -73,24 +74,24 @@ dependencies {
 
     // Jetpack Compose dependencies
     // Integration with activities
-    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.activity:activity-compose:1.5.1'
     // Compose Material Design
-    implementation 'androidx.compose.material:material:1.0.5'
+    implementation 'androidx.compose.material:material:1.2.1'
     // Animations
-    implementation 'androidx.compose.animation:animation:1.0.5'
+    implementation 'androidx.compose.animation:animation:1.2.1'
     // Tooling support (Previews, etc.)
-    implementation 'androidx.compose.ui:ui-tooling:1.0.5'
+    implementation 'androidx.compose.ui:ui-tooling:1.2.1'
     // Integration with ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     // Navigation support
-    implementation "androidx.navigation:navigation-compose:2.4.0-rc01"
+    implementation "androidx.navigation:navigation-compose:2.6.0-alpha01"
     // UI Tests
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.5'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.2.1'
     // When using a AppCompat theme
     implementation "com.google.accompanist:accompanist-appcompat-theme:0.16.0"
 
-    implementation "androidx.compose.runtime:runtime:1.0.5"
-    implementation "androidx.compose.runtime:runtime-rxjava3:1.0.5"
+    implementation "androidx.compose.runtime:runtime:1.2.1"
+    implementation "androidx.compose.runtime:runtime-rxjava3:1.2.1"
 
     // JAX-B dependencies for JDK 9+
     //implementation "javax.xml.bind:jaxb-api:2.2.12"
